# accounting-service

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  docker-cmd.sh  docker-compose.run.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  elasticmq.conf  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: main-branch-workflow.yml  publish.yml  run-tests.yml  run-tox.yml
accounting-sdk/: README.md  pyproject.toml
accounting-sdk/src/obp_accounting_sdk/: errors.py
alembic/: env.py
alembic/versions/: 20240624_124627_63a1d1c101bd_.py  20240628_174304_af57b4dcaecb_.py  20240701_140327_b053b4d195c8_.py  20240701_141545_b4ec928411bb_.py  20240702_161644_7f98613ff6b2_.py  20240702_170733_6f4c362b4c6a_.py  20240703_110209_326d50f895e9_.py  20240708_092647_ce4a1945bb55_.py  20240718_183953_d4a234cc39b4_.py  20240720_161202_786828d7f40c_.py  20240724_103617_c87e5b91d661_.py  20240724_164752_88d4ac66f8c5_.py  20240724_201243_58a488b56c1f_.py  20240805_155407_259ea6796f7b_.py  20240809_172124_78baff8a1ba2_.py  20240815_154344_b56e853bb310_.py  20240909_154014_1c15c81ce8a8_.py  20250123_142116_a6d8a5264aa3_.py  20250123_162036_8bda482e60ef_.py  20250213_113543_b974ebded6ab_.py  20250219_154931_a4cab64aa586_.py  20250311_161131_558b071bccc2_.py  20250318_160027_afe52ed2f369_.py  20250320_132450_69cc5f6c7512_.py  20250321_092213_17d02435b28e_.py  20250321_092419_d6a9bd20ae25_.py  20250521_145144_c0e195f21eb8_.py  20250714_123125_ac348615ff34_.py  20251024_161129_ae294ddca4a7_.py  20251027_160006_6f591862ac35_.py  20251105_111838_96d8347585d0_.py  20260312_132007_75dc053ee063_.py  20260402_143504_3642bb905be6_add_price_tiers.py  20260408_094050_590072d41213_remove_ml_rag_ml_retrieval.py  20260408_143504_3642bb905be6_add_price_tiers.py  20260410_162339_4f41f2bd0a86_add_circuit_extraction_subtype.py  20260413_091917_8c8dc5fa244d_set_identity_always_on_all_id_columns.py  20260608_160204_8eb5df0b7cbe_adding_em_synapse_mapping.py  20260612_103000_add_deplete_transaction_type.py  20260622_140000_c1faa7313bda_add_brian2_circuit_simulation.py  (+1 more)
app/: __main__.py  application.py  config.py  constants.py  dependencies.py  errors.py  logger.py  main.py  schemas.py  utils.py
app/api/: __init__.py  account.py  balance.py  budget.py  discount.py  estimate.py  job.py  price.py  report.py  reservation.py  root.py  usage.py  virtual_lab.py
app/data/: logging.yaml
app/db/: model.py  models.py  session.py  types.py  utils.py
app/endpoints/: __init__.py  root.py
app/endpoints/api/: __init__.py  reservation.py
app/queue/: __init__.py  schemas.py  session.py  utils.py
app/queue/consumer/: __init__.py  base.py  long_jobs.py  short_jobs.py  storage.py
app/repositories/: account.py  base.py  event.py  group.py  job.py  ledger.py  queue_message.py  usage.py
app/repository/: account.py  base.py  discount.py  event.py  group.py  job.py  ledger.py  price.py  report.py  task_registry.py
app/schema/: api.py  common.py  domain.py  queue.py
app/schemas/: api.py  domain.py
app/service/: account.py  balance.py  budget.py  charge_long_job.py  charge_long_jobs.py  charge_longrun.py  charge_oneshot.py  charge_short_job.py  charge_short_jobs.py  charge_storage.py  discount.py  job.py  price.py  pricing.py  release.py  report.py  reservation.py  usage.py
app/services/: charge_long_jobs.py  charge_short_jobs.py  charge_storage.py  price.py  reservation.py
app/task/: __init__.py
app/task/job_charger/: base.py  long_job.py  long_jobs.py  longrun.py  oneshot.py  short_job.py  short_jobs.py  storage.py
app/tasks/charger/: base.py  (+3 more)
demo/app/: __main__.py  api.py
docs/: grant-and-deplete.md  tiered-pricing.md
scripts/: populate.py
src/app/: config.py  logger.py  models.py
src/obp_accounting_sdk/: errors.py
tests/: conftest.py  constants.py  test_config.py  test_errors.py  test_logger.py  test_main.py  test_models.py  test_utils.py  utils.py
tests/_async/: test_factory.py  test_oneshot.py
tests/_sync/: test_factory.py  test_oneshot.py
tests/api/: test_account.py  test_balance.py  test_budget.py  test_deplete.py  test_discount.py  test_estimate.py  test_grant.py  test_job.py  test_price.py  test_release.py  test_report.py  test_reservation.py  test_root.py  test_usage.py  test_virtual_lab.py
tests/db/: test_model.py  test_models.py  test_session.py  test_utils.py
tests/queue/: test_session.py
tests/repository/: test_group.py  test_job.py  test_report.py  test_task_registry.py  test_usage.py
tests/service/: test_charge_long_job.py  test_charge_long_jobs.py  test_charge_longrun.py  test_charge_oneshot.py  test_charge_short_job.py  test_charge_short_jobs.py  test_charge_storage.py  test_estimate.py  test_price.py  test_release.py
tests/services/: test_charge_long_jobs.py  test_charge_short_jobs.py  test_charge_storage.py
(+61 files in other folders)
